<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Alarms" Id="{046a5301-5506-40ac-a704-744f0bfa435c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

	arrEventText 	: ARRAY[0..300] OF T_MaxSTring;	// All events messages defined for the system - indices corresponds to indices of aEvents
	arrActiveEvents : ARRAY[0..300] OF T_MaxSTring;	// Active events messages - displayed in active alarms
	arrEventLogs	: ARRAY[0..300] OF T_MaxSTring;	// Logged events messages - displayed in alarm history
	arrEventFlag	: ARRAY[0..300] OF BOOL;		// Events triggers

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>