<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="POU_EventTest" Id="{8d82d617-8835-43c9-9f51-b3200b880010}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM POU_EventTest
VAR
	fb_EventLog: FB_EventLog;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

ACT_Event_Mapping(); //Responsable for mapping the events string

// ----- Calling Event Log FB Template ----------------------------------------------------------------------------------------------------

fb_EventLog(bEnable:= TRUE,
			sDateTime:= PRG_MasterSystemTime.sDateTimeSpaces, //Template to generate a date time string (DD.MM.YYYY HH:MM:SS)
			aEventFlags:= GVL_Alarms.arrEventFlag, //Array of bool used to enumerate the events
			aEventTexts:= GVL_Alarms.arrEventText, //Array of string used to descript the events (will be conected with flag array)
			aActiveEvents:= GVL_Alarms.arrActiveEvents, //Array of string used to show the actived events
			aEventLog:= GVL_Alarms.arrEventLogs); //Array of string used to show all FB logs generated

//-----------------------------------------------------------------------------------------------------------------------------------------]]></ST>
    </Implementation>
    <Action Name="ACT_Event_Mapping" Id="{7d753b20-4a01-4454-b9e5-f878b783fbbf}">
      <Implementation>
        <ST><![CDATA[
//----- Emergency Stop ---------------------------------------------------------------------------------------------------------------

GVL_Alarms.arrEventText[0] := 'ES-000: HMI E-Stop Button Active.';
GVL_Alarms.arrEventText[1] := 'ES-001: Side E-Stop Button Active.';
GVL_Alarms.arrEventText[2] := 'ES-002: Door 1 Open.';
GVL_Alarms.arrEventText[3] := 'ES-003: Door 2 Open.';
GVL_Alarms.arrEventText[4] := 'ES-004: Door 3 Open.';
GVL_Alarms.arrEventText[5] := 'ES-005: Door 4 Open.';
GVL_Alarms.arrEventText[6] := 'ES-006: Door 5 Open.';
GVL_Alarms.arrEventText[7] := 'ES-007: Door 6 Open.';
GVL_Alarms.arrEventText[8] := 'ES-008: Terminal EL6910 FB Error.';
GVL_Alarms.arrEventText[9] := 'ES-009: Terminal EL6910 Communication Error.';

//------------------------------------------------------------------------------------------------------------------------------------

//----- Motion Error -----------------------------------------------------------------------------------------------------------------

GVL_Alarms.arrEventText[50] := 'ME-050: Vertical Axis Stage Collection Error.';
GVL_Alarms.arrEventText[51] := 'ME-051: Vertical Axis Sample Recovery Error.';
GVL_Alarms.arrEventText[52] := 'ME-052: Horizontal Axis Sample Recovery Error.';
GVL_Alarms.arrEventText[53] := 'ME-053: Opening Control Pomp 1 Error.';
GVL_Alarms.arrEventText[54] := 'ME-054: Opening Control Pomp 2 Error.';
GVL_Alarms.arrEventText[55] := 'ME-055: Opening Control Pomp 3 Error.';
GVL_Alarms.arrEventText[56] := 'ME-056: Opening Control Pomp 4 Error.';
GVL_Alarms.arrEventText[57] := 'ME-057: Opening Control Pomp 5 Error.';
GVL_Alarms.arrEventText[58] := 'ME-058: Opening Control Pomp 6 Error.';
GVL_Alarms.arrEventText[59] := 'ME-059: Opening Control Pomp 7 Error.';
GVL_Alarms.arrEventText[60] := 'ME-060: Opening Control Pomp 8 Error.';
GVL_Alarms.arrEventText[61] := 'ME-061: Opening Control Pomp 9 Error.';
GVL_Alarms.arrEventText[62] := 'ME-062: Opening Control Pomp 10 Error.';
GVL_Alarms.arrEventText[63] := 'ME-063: Pomp Motor 1 Error.';
GVL_Alarms.arrEventText[64] := 'ME-064: Pomp Motor 2 Error.';
GVL_Alarms.arrEventText[65] := 'ME-065: Pomp Motor 3 Error.';
GVL_Alarms.arrEventText[66] := 'ME-066: Pomp Motor 4 Error.';
GVL_Alarms.arrEventText[67] := 'ME-067: Pomp Motor 5 Error.';
GVL_Alarms.arrEventText[68] := 'ME-068: Pomp Motor 6 Error.';
GVL_Alarms.arrEventText[69] := 'ME-069: Pomp Motor 7 Error.';
GVL_Alarms.arrEventText[70] := 'ME-070: Pomp Motor 8 Error.';
GVL_Alarms.arrEventText[71] := 'ME-071: Pomp Motor 9 Error.';
GVL_Alarms.arrEventText[72] := 'ME-072: Pomp Motor 10 Error.';
GVL_Alarms.arrEventText[73] := 'ME-073: Valve Motor 1 Error.';
GVL_Alarms.arrEventText[74] := 'ME-074: Valve Motor 2 Error.';
GVL_Alarms.arrEventText[75] := 'ME-075: Valve Motor 3 Error.';
GVL_Alarms.arrEventText[76] := 'ME-076: Valve Motor 4 Error.';
GVL_Alarms.arrEventText[77] := 'ME-077: Valve Motor 5 Error.';

//------------------------------------------------------------------------------------------------------------------------------------

//----- Interlock Error --------------------------------------------------------------------------------------------------------------

GVL_Alarms.arrEventText[100] := 'IE-100: ';
GVL_Alarms.arrEventText[101] := 'IE-101: ';
GVL_Alarms.arrEventText[102] := 'IE-102: ';
GVL_Alarms.arrEventText[103] := 'IE-103: ';
GVL_Alarms.arrEventText[104] := 'IE-104: ';

//------------------------------------------------------------------------------------------------------------------------------------

//----- Process Warning --------------------------------------------------------------------------------------------------------------

GVL_Alarms.arrEventText[150] := 'PW-150: ';
GVL_Alarms.arrEventText[151] := 'PW-151: ';
GVL_Alarms.arrEventText[152] := 'PW-152: ';
GVL_Alarms.arrEventText[153] := 'PW-153: ';
GVL_Alarms.arrEventText[154] := 'PW-154: ';

//------------------------------------------------------------------------------------------------------------------------------------

//----- System Fault -----------------------------------------------------------------------------------------------------------------

GVL_Alarms.arrEventText[200] := 'SF-200: System Powered Up.';
GVL_Alarms.arrEventText[201] := 'SF-201: ';
GVL_Alarms.arrEventText[202] := 'SF-202: ';
GVL_Alarms.arrEventText[203] := 'SF-203: ';
GVL_Alarms.arrEventText[204] := 'SF-204: ';

//------------------------------------------------------------------------------------------------------------------------------------

]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="POU_EventTest">
      <LineId Id="8" Count="0" />
      <LineId Id="28" Count="11" />
      <LineId Id="12" Count="0" />
    </LineIds>
    <LineIds Name="POU_EventTest.ACT_Event_Mapping">
      <LineId Id="2" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="4" Count="6" />
      <LineId Id="81" Count="1" />
      <LineId Id="12" Count="1" />
      <LineId Id="69" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="15" Count="26" />
      <LineId Id="45" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="47" Count="3" />
      <LineId Id="52" Count="1" />
      <LineId Id="73" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="55" Count="3" />
      <LineId Id="60" Count="1" />
      <LineId Id="75" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="63" Count="3" />
      <LineId Id="78" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="79" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>